Fixed: Number list being truncated
Changelog: fixed

--- a/webapp/channels/src/sass/layout/_markdown.scss
+++ b/webapp/channels/src/sass/layout/_markdown.scss
@@ -408,6 +408,7 @@ ol.markdown__list {
             padding-right: 8px;
             content: counter(list) ".";
             text-align: right;
+            word-break: keep-all;
         }
     }
 }
